# AutoNav

./: .gitignore  CMakeLists.txt  IMUTester.py  README.md  TODO  compile_opencv.sh  compile_opencv2.sh  goodLinks.txt  testCLient.py
ApicalAngleAnalysis/: testing.m
Five_point_solver_ceres/: Five_point_solver_ceres.sln
Five_point_solver_ceres/Five_point_solver_ceres/: Five_point_solver_ceres.vcxproj  Five_point_solver_ceres.vcxproj.filters  alignment.h  arrsac.h  camera_intrinsics_prior.h  create_and_initialize_ransac_variant.h  distribution.h  eight_point_fundamental_matrix.cc  eight_point_fundamental_matrix.h  essential_matrix_utils.h  estimate_relative_pose.h  estimate_twoview_info.h  estimate_uncalibrated_relative_pose.cc  estimate_uncalibrated_relative_pose.h  estimator.h  feature.h  feature_correspondence.h  five_point.h  fundamental_matrix_util.h  inlier_support.h  main.cpp  mle_quality_measurement.h  polynomial.h  pose_util.h  prosac.h  prosac_sampler.h  quality_measurement.h  random.h  random_sampler.h  ransac.h  sample_consensus_estimator.h  sampler.h  sequential_probability_ratio.cc  sequential_probability_ratio.h  sfm_types.h  triangulation.h  util_math.h  util_util.h  verify_two_view_matches.h
control_servo/: control_servo.py
control_servo/Servo_Serial/: Servo_Serial.ino
controller-docs/: README.rst  commands.py
pranjal/roboNav/: CMakeLists.txt  README.md  test.cpp  todo.txt
pranjal/roboNav/examples/: main.cpp
pranjal/roboNav/src/: IOfunc.cpp  cell.cpp  edge.cpp  keyFrame.cpp  keyPoint.cpp
test/: DoneTillNow  GlobalController.py  GlobalControllerAruco.py  Makefile  Mat.txt  MobileCommunication.py  MobileIMU.py  TODO  VideoGrab.py  calibrate.py  calibrate_bot.py  calibration_measurements.txt  cam_params_aniket.yml  cam_params_flycap.yml  control_servo.py  detect_aruco_flycam.py  detect_aruco_flycam_test.py  detect_aruco_image.py  detect_aruco_image_test.py  detect_aruco_video.py  example_t.lcm  imports.py  obstacle-lcm.py  obstacle_process.cpp  odometry.py  utils.py
test/angle-estimation/: Makefile  calib_results_flycap.txt  correspondance.h  find_deviation_angle.cpp  twoview_info.h
test/checkerboard-flycap/: rename.sh
test/checkerboard-harman/: rename.sh
test/exlcm/: example_t.py
test/lcm-test/: Makefile  receiver.py  sender  sender-simple.cpp  sender.cpp
test/obstacle-detection/: Makefile  generate_floor_video  generate_floor_video.sh  hsv-test  hsv-test.cpp  (+5 more)
(+97 files in other folders)
